--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
     </div>
     <div class="experience">
         <ul class="experience-list" id="header-experience">
-            <div>
+            <div class="experience-list__one">
             <div class="icon1"></div>
             <li><a href="./experience1.html">Experience 1</a></li>
         </div>
-        <div>
+        <div class="experience-list__two">
             <div class="icon2"></div>
             <li><a href="./experience2.html">Experience 2</a></li>
         </div>
-        <div>  
+        <div class="experience-list__three">  
             <div class="icon3"></div>
             <li><a href="./experience3.html">Experience 3</a></li>
         </div>
