expand more icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="header">
@@ -22,6 +23,9 @@
         <p id="header-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, cumque quos ut laboriosam corporis, quia possimus sapiente dolorem dignissimos excepturi error. Et nisi harum dolor nobis placeat unde id fugiat..</p>
         </div>
     <img class="svg-image" src="./svgImage.svg" alt="image"/>
+    <span class="material-symbols-outlined">
+        expand_more
+        </span>
     </div>
     <div class="projects">
         <ul class="project-list" id="header-projects">
