--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         <p id="header-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, cumque quos ut laboriosam corporis, quia possimus sapiente dolorem dignissimos excepturi error. Et nisi harum dolor nobis placeat unde id fugiat..</p>
         </div>
     <img class="svg-image" src="./svgImage.svg" alt="image"/>
-    <span class="material-symbols-outlined">
+    <div class="expand">
+        <span class="material-symbols-outlined">
         expand_more
         </span>
+    </div>
     </div>
     <div class="projects">
         <ul class="project-list" id="header-projects">
